data/derived/comb/progs/unify/prog8742.ml.out
Characters 18-20:
  let _ = sepConcat "" ["a";"b";"c";"d";"e"];;
                    ^^
Error: This expression has type string but an expression was expected of type
         string list
